examples/modules/valid/math/utils.axom
pub fn add(a: Int, b: Int) -> Int => a + b
pub fn sub(a: Int, b: Int) -> Int => a - b

fn internal_mul(a: Int, b: Int) -> Int => a * b
