examples/modules/invalid/cycle/b.axom
import invalid.cycle.a

pub fn id_b(x: Int) -> Int => x
